Update France24 cleaning notebook to adjust execution counts and modify output display format for clustered articles

--- a/Extraction des donner/France24/france_24_cleaning.ipynb
+++ b/Extraction des donner/France24/france_24_cleaning.ipynb
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "id": "586dd8e6-a37a-4f6b-b1a5-49cfe4e4bebb",
    "metadata": {},
    "outputs": [
@@ -1764,36 +1764,120 @@
      "text": [
       "\n",
       "🔹 Cluster 0:\n",
-      "                                                 title     source\n",
-      "79   أسبوع حاسم أمام الحكومة الفرنسية يبدأ بالتصويت...  France_24\n",
-      "84   مارين لوبان تخير رئيس الوزراء بارنييه بين تقدي...  France_24\n",
-      "103  ألمانيا: اليمين المتطرف يفوز للمرة الأولى في ا...  France_24\n",
-      "137  فرنسا: لا هواتف قبل سن الـ11 ولا أجهزة ذكية قب...  France_24\n",
-      "169  ثورة التحرير الجزائرية: ماكرون يعترف بأن العرب...  France_24\n",
+      "                                                   title  \\\n",
+      "79     أسبوع حاسم أمام الحكومة الفرنسية يبدأ بالتصويت...   \n",
+      "84     مارين لوبان تخير رئيس الوزراء بارنييه بين تقدي...   \n",
+      "103    ألمانيا: اليمين المتطرف يفوز للمرة الأولى في ا...   \n",
+      "137    فرنسا: لا هواتف قبل سن الـ11 ولا أجهزة ذكية قب...   \n",
+      "169    ثورة التحرير الجزائرية: ماكرون يعترف بأن العرب...   \n",
+      "...                                                  ...   \n",
+      "10439  تحليل - فرنسا: عندما يستخدم رئيس الوزراء فرانس...   \n",
+      "10450  مخرج فرنسي إيراني يُحرم من تصوير فيلم في فرنسا...   \n",
+      "10451  مشروع قانون يفرض قيودا على الهجرة والمهاجرين.....   \n",
+      "10565  إيران تدين تصريحات ماكرون بشأن مسجونين فرنسيين...   \n",
+      "10592  ألمانيا: آلاف المتظاهرين في برلين ضد اليمين ال...   \n",
+      "\n",
+      "                                                 content  \n",
+      "79     أسبوع مليء بالمخاطر تدخله الحكومة الفرنسية، اب...  \n",
+      "84     منحت مارين لوبان زعيمة حزب التجمع الوطني اليمي...  \n",
+      "103    استطاع حزب البديل من أجل ألمانيا اليميني المتط...  \n",
+      "137    موضوع إدمان الأطفال على الشاشات من هواتف ولوحا...  \n",
+      "169    أقر الرئيس الفرنسي إيمانويل ماكرون الجمعة بأن ...  \n",
+      "...                                                  ...  \n",
+      "10439  تطرق رئيس الوزراء الفرنسي فرانسوا بايرو مساء ا...  \n",
+      "10450  لم يتمكن المخرج الفرنسي الإيراني دياكو يزداني ...  \n",
+      "10451  تعهد المحافظ فريدريش ميرتس، الأوفر حظا للفوز ب...  \n",
+      "10565  انتقدت إيران الإثنين على لسان إسماعيل بقائي، ا...  \n",
+      "10592  تظاهر عشرات آلاف الأشخاص في برلين الأحد لرفض ح...  \n",
+      "\n",
+      "[754 rows x 2 columns]\n",
       "\n",
       "🔹 Cluster 1:\n",
-      "                                               title     source\n",
-      "3  إسرائيل \"تغتال\" صحفيا ومصورا من قناة الجزيرة ف...  France_24\n",
-      "4  خليل الحية عن اغتيال هنية.. هذه جريمة لا بد لم...  France_24\n",
-      "5  إجراءات أمنية مشددة في إسرائيل تحسبا لسيناريوه...  France_24\n",
-      "6  اغتيال إسماعيل هنية.. واشنطن تنفي تورطها وقلق ...  France_24\n",
-      "9          كيف سيرد \"محور المقاومة\" على اغتيال هنية؟  France_24\n",
+      "                                                   title  \\\n",
+      "3      إسرائيل \"تغتال\" صحفيا ومصورا من قناة الجزيرة ف...   \n",
+      "4      خليل الحية عن اغتيال هنية.. هذه جريمة لا بد لم...   \n",
+      "5      إجراءات أمنية مشددة في إسرائيل تحسبا لسيناريوه...   \n",
+      "6      اغتيال إسماعيل هنية.. واشنطن تنفي تورطها وقلق ...   \n",
+      "9              كيف سيرد \"محور المقاومة\" على اغتيال هنية؟   \n",
+      "...                                                  ...   \n",
+      "10438  إسرائيل تنفذ ضربات على مواقع لحزب الله في لبنا...   \n",
+      "10443  حماس تعلن أسماء ثلاثة رهائن إسرائيليين ستفرج ع...   \n",
+      "10559      الضرائب الفلسطينية: أداة ضغط اقتصادي إسرائيلي   \n",
+      "10593      الضرائب الفلسطينية: أداة ضغط اقتصادي إسرائيلي   \n",
+      "10733      الضرائب الفلسطينية: أداة ضغط اقتصادي إسرائيلي   \n",
+      "\n",
+      "                                                 content  \n",
+      "3      دانت قناة الجزيرة القطرية الأربعاء \"اغتيال\" اث...  \n",
+      "4      خليل الحية القيادي في حماس: الحركة وإيران لا ت...  \n",
+      "5      اغتيل إسماعيل هنية‬‬‬‬‬‬‬رئيس المكتب السياسي ل...  \n",
+      "6      دانت قطر الأربعاء اغتيال رئيس المكتب السياسي ل...  \n",
+      "9      تستعدّ المجموعات المنضوية في إطار ما يعرف ب\"مح...  \n",
+      "...                                                  ...  \n",
+      "10438  قالت وزارة الصحة اللبنانية اليوم الجمعة إن شخص...  \n",
+      "10443  أعلنت إسرائيل أنها تلقت قائمة بأسماء رهائن من ...  \n",
+      "10559  تستمر إسرائيل في اقتطاع جزء كبير من أموال الضر...  \n",
+      "10593  تستمر إسرائيل في اقتطاع جزء كبير من أموال الضر...  \n",
+      "10733  تستمر إسرائيل في اقتطاع جزء كبير من أموال الضر...  \n",
+      "\n",
+      "[2148 rows x 2 columns]\n",
       "\n",
       "🔹 Cluster 2:\n",
-      "                                                 title     source\n",
-      "49   مناظرة مرتقبة الثلاثاء بين دي فانس ووالز المرش...  France_24\n",
-      "87   رئيس المجلس الأوروبي و منسقة الشؤون الخارجية ف...  France_24\n",
-      "92   ترامب يرشح مستشاره السابق و\"منتقد الدولة العمي...  France_24\n",
-      "108  أمريكا: مقتل 6 أشخاص في تحطم طائرة إسعاف وترام...  France_24\n",
-      "116  ترامب سيفرض رسوما جمركية كبيرة على الواردات من...  France_24\n",
+      "                                                   title  \\\n",
+      "49     مناظرة مرتقبة الثلاثاء بين دي فانس ووالز المرش...   \n",
+      "87     رئيس المجلس الأوروبي و منسقة الشؤون الخارجية ف...   \n",
+      "92     ترامب يرشح مستشاره السابق و\"منتقد الدولة العمي...   \n",
+      "108    أمريكا: مقتل 6 أشخاص في تحطم طائرة إسعاف وترام...   \n",
+      "116    ترامب سيفرض رسوما جمركية كبيرة على الواردات من...   \n",
+      "...                                                  ...   \n",
+      "10750  قاض فيدرالي يعلق إشراف لجنة ماسك على نظام المد...   \n",
+      "10751  مخطط دونالد ترامب لتهجير سكان قطاع غزة بين الو...   \n",
+      "10753  الولايات المتحدة تأمر بوقف عشرات المنح المقدمة...   \n",
+      "10754  وزير الخارجية الأمريكية لن يحضر قمة العشرين في...   \n",
+      "10755  ترامب يصدر أمرا تنفيذيا يحظر مشاركة المتحولات ...   \n",
+      "\n",
+      "                                                 content  \n",
+      "49     يتواجه المرشحان لمنصب نائب الرئيس الأمريكي الج...  \n",
+      "87     في زيارة رمزية لتقديم الدعم إلى أوكرانيا في أو...  \n",
+      "92     أعلن الرئيس الأمريكي المنتخب دونالد ترامب السب...  \n",
+      "108    تحطمت الجمعة طائرة إسعاف طبية في فيلادلفيا الأ...  \n",
+      "116    في أول فصل من فصول الصراعات التجارية المقبلة، ...  \n",
+      "...                                                  ...  \n",
+      "10750  قام قاض فيدرالي أمريكي السبت بتعليق قرار إشراف...  \n",
+      "10751  يصطدم المخطط الذي يريد دونالد ترامب تنفيذه في ...  \n",
+      "10753  رغم استثنائها في وقت سابق المساعدات الغذائية ا...  \n",
+      "10754  أعلن وزير الخارجية الأميركي ماركو روبيو الأربع...  \n",
+      "10755  في أحدث قراراته التي تستهدف مجتمع العابرين جنس...  \n",
+      "\n",
+      "[966 rows x 2 columns]\n",
       "\n",
       "🔹 Cluster 3:\n",
-      "                                               title     source\n",
-      "0  الألعاب الأولمبية: الملاكمة خليف تبلغ ربع النه...  France_24\n",
-      "1  محطة أفريقيا في الألعاب الأولمبية بباريس: \"خيم...  France_24\n",
-      "2  تنديدا باغتيال هنية... مظاهرات مناهضة لإسرائيل...  France_24\n",
-      "7  تبادل عدة سجناء بين روسيا وعدة دول غربية بينهم...  France_24\n",
-      "8  صفقة تبادل كبيرة لسجناء بين روسيا وعدة دول بتن...  France_24\n"
+      "                                                   title  \\\n",
+      "0      الألعاب الأولمبية: الملاكمة خليف تبلغ ربع النه...   \n",
+      "1      محطة أفريقيا في الألعاب الأولمبية بباريس: \"خيم...   \n",
+      "2      تنديدا باغتيال هنية... مظاهرات مناهضة لإسرائيل...   \n",
+      "7      تبادل عدة سجناء بين روسيا وعدة دول غربية بينهم...   \n",
+      "8      صفقة تبادل كبيرة لسجناء بين روسيا وعدة دول بتن...   \n",
+      "...                                                  ...   \n",
+      "10740  البيت الأبيض يمنع مراسل وكالة الأنباء \"أسوشيتد...   \n",
+      "10743  إيلون ماسك يسعى للاستحواذ على \"أوبن إيه آي\" ال...   \n",
+      "10745  محاكمة مهاجم سلمان رشدي: هيئة المحلفين تستمع ل...   \n",
+      "10746                    إيلون ماسك: إدارة تحت المراقبة؟   \n",
+      "10749  حرائق لوس أنجلس: إخفاقات في إدارة الكارثة تثير...   \n",
+      "\n",
+      "                                                 content  \n",
+      "0      تغلبت الملاكمة الجزائرية إيمان خليف على خصمتها...  \n",
+      "1      موفد فرانس24 إلى سان دوني – تتواصل فعاليات معر...  \n",
+      "2      تظاهر آلاف الأشخاص في تركيا والمغرب وتونس تندي...  \n",
+      "7      بتنسيق من تركيا، تم تنفيذ عملية تبادل نحو 26 س...  \n",
+      "8      أُطلق سراح الصحافي الأميركي إيفان غيرشكوفيتش و...  \n",
+      "...                                                  ...  \n",
+      "10740  منعت إدارة ترامب مراسل \"أسوشيتد برس\" من تغطية ...  \n",
+      "10743  يسعى إيلون ماسك لاستعادة نفوذه في عالم الذكاء ...  \n",
+      "10745  على أن تستأنف المحاكمة الثلاثاء، استمعت هيئة ا...  \n",
+      "10746  نستضيف في هذا العدد من \"حدث اليوم\" الكاتب والص...  \n",
+      "10749  الحرائق البرية ليست ظاهرة جديدة في كاليفورنيا،...  \n",
+      "\n",
+      "[6346 rows x 2 columns]\n"
      ]
     }
    ],
@@ -1805,7 +1889,7 @@
     "# Afficher les articles regroupés par cluster\n",
     "for i in range(optimal_k):\n",
     "    print(f\"\\n🔹 Cluster {i}:\")\n",
-    "    print(df[df[\"cluster\"] == i][[\"title\", \"source\"]].head(5))  # Afficher 5 articles par cluster\n"
+    "    print(df[df[\"cluster\"] == i][[\"title\", \"content\"]])  # Afficher 5 articles par cluster\n"
    ]
   },
   {
