trying to do a better algorithm but i f*cked-up

--- a/Extraction des donner/France24/scarpping_automation.ipynb
+++ b/Extraction des donner/France24/scarpping_automation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "76efcb4e-a24c-458b-bd00-afc91985d770",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2709,7 +2711,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "2aedddca-604e-46a8-8e29-d85340249247",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3946,7 +3950,9 @@
    "cell_type": "code",
    "execution_count": 110,
    "id": "bbe8ba6d-097e-4efe-a077-ebdb3b9ca018",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4696,7 +4702,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8b602645-5e1d-4769-9309-c2694bcf14c7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6022,7 +6030,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "3b7447fe-4eb2-4048-9b14-fd6b2f1f39d2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
