--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4271,8 +4271,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04df7dce-aefa-4dbe-a9f5-a624a944f88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\HP\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal number of clusters: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import Normalizer\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv(\"random_sample_1000.csv\")  # Update with your file path\n",
+    "\n",
+    "# Extract titles\n",
+    "titles = df[\"title\"].dropna().tolist()\n",
+    "\n",
+    "# Download Arabic stopwords if not available\n",
+    "nltk.download(\"stopwords\")\n",
+    "arabic_stopwords = set(stopwords.words(\"arabic\"))\n",
+    "\n",
+    "# Preprocess Arabic text\n",
+    "def preprocess_text(text):\n",
+    "    return \" \".join([word for word in text.split() if word not in arabic_stopwords])\n",
+    "\n",
+    "titles_processed = [preprocess_text(title) for title in titles]\n",
+    "\n",
+    "# Vectorizing Arabic text using TF-IDF\n",
+    "vectorizer = TfidfVectorizer(analyzer=\"word\")\n",
+    "X = vectorizer.fit_transform(titles_processed)\n",
+    "\n",
+    "# Normalize for better clustering\n",
+    "X = make_pipeline(Normalizer()).fit_transform(X)\n",
+    "\n",
+    "# Determine optimal number of clusters using Elbow method\n",
+    "inertia = []\n",
+    "K_range = range(2, 10)\n",
+    "\n",
+    "for k in K_range:\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "    kmeans.fit(X)\n",
+    "    inertia.append(kmeans.inertia_)\n",
+    "\n",
+    "# Find the optimal K\n",
+    "optimal_k = K_range[np.diff(inertia, 2).argmin() + 1]\n",
+    "print(f\"Optimal number of clusters: {optimal_k}\")\n",
+    "\n",
+    "# Apply K-Means with the optimal K\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=42, n_init=10)\n",
+    "clusters = kmeans.fit_predict(X)\n",
+    "\n",
+    "# Add cluster labels to DataFrame\n",
+    "df[\"cluster\"] = clusters\n",
+    "\n",
+    "# Save clustered data\n",
+    "df.to_csv(\"clustered_titles.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97ace5ea-3858-4eae-a8c3-b0a8c16b79f4",
    "metadata": {},
    "outputs": [],
    "source": []
