--- a/fact_TFIDF.ipynb
+++ b/fact_TFIDF.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "40cb01e1-6d65-4310-b0c2-72a830e1f379",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,25 @@
       "Nombre de titres dans le cluster 7 : 52\n",
       "Similarité moyenne (Levenshtein) : 0.2686\n",
       "Nombre de titres dans le cluster 8 : 213\n",
-      "Similarité moyenne (Levenshtein) : 0.2499\n"
+      "Similarité moyenne (Levenshtein) : 0.2499\n",
+      "Nombre de titres dans le cluster 9 : 110\n",
+      "Similarité moyenne (Levenshtein) : 0.2540\n",
+      "Nombre de titres dans le cluster 10 : 70\n",
+      "Similarité moyenne (Levenshtein) : 0.2529\n",
+      "Nombre de titres dans le cluster 11 : 41\n",
+      "Similarité moyenne (Levenshtein) : 0.2598\n",
+      "Nombre de titres dans le cluster 12 : 21\n",
+      "Similarité moyenne (Levenshtein) : 0.2529\n",
+      "Nombre de titres dans le cluster 13 : 32\n",
+      "Similarité moyenne (Levenshtein) : 0.2610\n",
+      "Nombre de titres dans le cluster 14 : 27\n",
+      "Similarité moyenne (Levenshtein) : 0.2554\n",
+      "Nombre de titres dans le cluster 15 : 39\n",
+      "Similarité moyenne (Levenshtein) : 0.2482\n",
+      "Nombre de titres dans le cluster 16 : 29\n",
+      "Similarité moyenne (Levenshtein) : 0.2642\n",
+      "Nombre de titres dans le cluster 17 : 19\n",
+      "Similarité moyenne (Levenshtein) : 0.2571\n"
      ]
     }
    ],
