clusters with dates

--- a/kmeans_arabic_clustering.ipynb
+++ b/kmeans_arabic_clustering.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "85e5a514-2563-41f9-a8ef-d4948e243f88",
+   "execution_count": null,
+   "id": "e99e3a74-be47-4154-a36b-e6f49c9a830d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,59 +20,15 @@
     "import torch\n",
     "from tqdm import tqdm\n",
     "\n",
-    "import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c147b87d-2d27-4850-964d-cbdf2ce95fb8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            source                                              title  \\\n",
-      "0  Sky_News_Arabic  دراسة تحذر: إنفلونزا الطيور قد تصيب عمال المزا...   \n",
-      "1  Sky_News_Arabic          بينيت: لهذا السبب علينا الاستيلاء على رفح   \n",
-      "2         Al Hurra  أمازيغية ومساجد وأخلاق.. قضايا أشعلت منصات الت...   \n",
-      "3        France_24  غزة: تحركات الجامعات الأميركية تحدٍ انتخابي لب...   \n",
-      "4        France_24  فرحة سعودية باستضافة كأس العالم 2034 يقابلها ق...   \n",
-      "\n",
-      "                                                 url published_at  \\\n",
-      "0   https://www.skynewsarabia.com/technology/1753538   2024-11-07   \n",
-      "1  https://www.skynewsarabia.com/middle-east/1699710   2024-03-14   \n",
-      "2  https://www.alhurra.com/maghreb-voices/2024/11...   2024-11-01   \n",
-      "3  https://www.france24.com/ar/%D9%81%D9%8A%D8%AF...   2024-04-26   \n",
-      "4  https://www.france24.com/ar/%D8%B1%D9%8A%D8%A7...   2024-12-13   \n",
-      "\n",
-      "                tags                                            content  \n",
-      "0                صحة  دعا مسؤولو قطاع الصحة الفيدرالية يوم الخميس إل...  \n",
-      "1           شرق أوسط  قال رئيس الوزراء الإسرائيلي السابق نفتالي بيني...  \n",
-      "2            no_tags  أثارت زيارة وزيرة الثقافة الفرنسية، رشيدة داتي...  \n",
-      "3  الأخبار المغاربية  ما الذي تقوله التحركات الطلابية التي تتسع في ا...  \n",
-      "4              رياضة  شهدت الرياض أجواء احتفالية مبهجة بعد فوز السعو...  \n",
-      "Index(['source', 'title', 'url', 'published_at', 'tags', 'content'], dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
+    "import datetime\n",
+    "\n",
     "# 📁 Étape 2 : Chargement des données\n",
     "df = pd.read_csv(\"random_sample_1000.csv\")\n",
     "\n",
     "# 👀 Aperçu\n",
     "print(df.head())\n",
-    "print(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "2135b957-5a4b-43df-91b7-26eb3ff17bdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(df.columns)\n",
+    "\n",
     "# 🧼 Étape 3 : Prétraitement du texte\n",
     "def clean_text(text):\n",
     "    if pd.isnull(text):\n",
@@ -86,31 +42,8 @@
     "\n",
     "# 🕰️ Traitement de la date\n",
     "df['published_at'] = pd.to_datetime(df['published_at'], errors='coerce')\n",
-    "df['timestamp'] = df['published_at'].astype(np.int64) // 10**9  # timestamp in seconds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "adba5051-dce9-4b84-af31-0c3095b66351",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "084c70f0384541d1aaf783fa0245c66a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Vectorisation BERT:   0%|                                                  | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "df['timestamp'] = df['published_at'].astype(np.int64) // 10**9  # timestamp in seconds\n",
+    "\n",
     "# 🧠 Étape 4 : Vectorisation BERT multilingue avec asafaya/bert-base-arabic\n",
     "\n",
     "import torch\n",
@@ -150,16 +83,9 @@
     "        emb = np.zeros(768)  # vecteur neutre en cas d’erreur\n",
     "    bert_vectors.append(emb)\n",
     "\n",
-    "bert_vectors = np.array(bert_vectors)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f6a4bb59-f199-4d35-a428-c90c53d5e805",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bert_vectors = np.array(bert_vectors)\n",
+    "\n",
+    "\n",
     "# 🧮 Étape 5 : Encodage des autres colonnes\n",
     "other_features = pd.DataFrame()\n",
     "\n",
@@ -170,16 +96,8 @@
     "\n",
     "# Encodage OneHot\n",
     "encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
-    "encoded_features = encoder.fit_transform(other_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "985a1ec7-4e47-4bea-9bb3-71f739b079ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "encoded_features = encoder.fit_transform(other_features)\n",
+    "\n",
     "# 🎛️ Étape 6 : Combinaison et pondération\n",
     "# On va accorder plus de poids au BERT (titre + contenu) et à la date\n",
     "scaler = MinMaxScaler()\n",
@@ -194,53 +112,13 @@
     "    bert_vectors * bert_weight,\n",
     "    date_scaled * date_weight,\n",
     "    encoded_features * other_weight\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a41a7599-2d28-4ef8-b0ec-f7515f6ad5e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "])\n",
+    "\n",
     "# 📊 Étape 7 : Clustering K-means\n",
     "k = 15  # Choisir le nombre de clusters\n",
     "kmeans = KMeans(n_clusters=k, random_state=42)\n",
-    "df['cluster'] = kmeans.fit_predict(combined_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b89f7acb-23b7-46ba-9332-977241584b25",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cluster\n",
-      "0      41\n",
-      "1     108\n",
-      "2      40\n",
-      "3     100\n",
-      "4      78\n",
-      "5      66\n",
-      "6     211\n",
-      "7      43\n",
-      "8      39\n",
-      "9     100\n",
-      "10     25\n",
-      "11     20\n",
-      "12     38\n",
-      "13     17\n",
-      "14     74\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
+    "df['cluster'] = kmeans.fit_predict(combined_features)\n",
+    "\n",
     "print(df['cluster'].value_counts().sort_index())\n"
    ]
   },
