Refactor code structure for improved readability and maintainability

--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -1274,8 +1274,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b6854040-2ecf-4339-a9c9-b314646360b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4                ذهب\n",
+       "6       أخبار فلسطين\n",
+       "7             اقتصاد\n",
+       "24               نفط\n",
+       "39          شرق أوسط\n",
+       "40      أخبار العالم\n",
+       "42      أخبار أميركا\n",
+       "46     أخبار إسرائيل\n",
+       "49      أخبار العالم\n",
+       "52     أخبار إسرائيل\n",
+       "53      أخبار أميركا\n",
+       "57     أخبار إسرائيل\n",
+       "61     أخبار إسرائيل\n",
+       "68               NaN\n",
+       "71    أميركا لاتينية\n",
+       "73       أخبار لبنان\n",
+       "79     أخبار السودان\n",
+       "80     أخبار إسرائيل\n",
+       "83      أخبار أميركا\n",
+       "84       أخبار اليمن\n",
+       "86      أخبار فلسطين\n",
+       "87      أسواق عالمية\n",
+       "Name: tags, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['clusters']==4].tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f0b739-9dbe-4c15-b0fc-ae326ffaaf36",
    "metadata": {},
    "outputs": [],
    "source": []
